# gitsql

./: .gitignore  Cargo.toml  README.md  build.rs
db/scripts/: generate.sh
